[project]
name = "simplepcap"
version = "0.1.8"
description = "A simple pcap library for Python"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["pcap", "development", "networking", "python"]
authors = [
  {name = "Illia Chaban", email = "ic-it@mail.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",

  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  
]


[project.optional-dependencies]
dev = [
  "black==23.9.1", 
  "flake8==6.1.0", 
  "Flake8-pyproject==1.2.3",
  "flake8-function-order==0.0.5",

  "mkdocs==1.5.2",
  "mkdocstrings[python]==0.23.0",
  "mkdocs-material==9.3.1",

  "pytest==7.4.2",
]

docs = [
  "mkdocs==1.5.2",
  "mkdocstrings[python]==0.23.0",
  "mkdocs-material==9.3.1",
]

lint = [
  "flake8==6.1.0", 
  "Flake8-pyproject==1.2.3",
  "flake8-function-order==0.0.5",
]

test = [
  "pytest==7.4.2",
]

publish = [
  "build==1.0.3",
]

[project.urls]
"Homepage" = "https://ic-it.github.io/simplepcap/"
"Documentation" = "https://ic-it.github.io/simplepcap/"
"Bug Reports" = "https://github.com/ic-it/simplepcap/issues"
"Source Code" = "https://github.com/ic-it/simplepcap"


[tool.flake8]
max-line-length = 120
count = true

[tool.black]
line-length = 120

